--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "client-oauth2": "^4.2.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-spotify-api": "^2.4.0",
+    "react-spotify-player": "^1.0.4",
+    "react-ui-cards": "^2.0.0",
+    "simple-oauth2": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
